# Testing

./: .gitignore  Makefile  README.md
.devcontainer/: devcontainer.json  docker-compose.yml  setup.sh
apps/api/: .env.example  .gitignore  alembic.ini  database.py  main.py  models.py  pyproject.toml  requirements.txt  settings.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_items.py  0001_init.py  058a0dbb8397_initial_crm_schema.py  50b338008fc4_initial_schema.py
apps/api/app/: config.py  database.py  main.py  models.py
apps/api/app/models/: __init__.py  activity.py  customer.py  lead.py
apps/api/app/routers/: activities.py  customers.py  health.py  leads.py
apps/web/: README.md  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: HealthStatus.tsx
apps/web/src/app/: layout.tsx  page.tsx
infra/: docker-compose.yml
